--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/autoware_adapi_version_msgs
-	previous = 
-	base = 3ac75b4
+	previous = 3ac75b4
+	base = 1cc128f
 	trim = 
 	trimbase = 
