--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/autoware_adapi_v1_msgs
-	previous = 
-	base = 2f7fc38
+	previous = 2f7fc38
+	base = 0ca6679
 	trim = 
 	trimbase = 
