--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/autoware_adapi_v1_msgs
-	previous = 
-	base = 83fb458
+	previous = 83fb458
+	base = 7af6998
 	trim = 
 	trimbase = 
