--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/autoware_adapi_version_msgs
-	previous = 
-	base = 7649394
+	previous = 7649394
+	base = 09702fd
 	trim = 
 	trimbase = 
