--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 75c3e00
-	base = 7c710f5
+	base = c6f2e33
 	trim = autoware_adapi_v1_msgs
-	trimbase = 
+	trimbase = 7c710f5
