--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 75c3e00
-	base = 8a332ad
+	base = 41ff8d8
 	trim = autoware_adapi_version_msgs
-	trimbase = 
+	trimbase = 8a332ad
