--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 75c3e00
-	base = 20d43e6
+	base = 51004e9
 	trim = autoware_adapi_v1_msgs
-	trimbase = 
+	trimbase = 20d43e6
