--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 75c3e00
-	base = 24552b8
+	base = e1ee351
 	trim = autoware_adapi_version_msgs
-	trimbase = 
+	trimbase = 24552b8
