--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.2.1-1": ["Tue May 07 2024", "Takagi, Isamu", "isamu.takagi@tier4.jp"]}
+{"1.3.0-2": ["Sun Sep 29 2024", "Takagi, Isamu", "isamu.takagi@tier4.jp"], "1.2.1-1": ["Tue May 07 2024", "Takagi, Isamu", "isamu.takagi@tier4.jp"]}
